<resources>
    <string name="app_name">Calculator</string>

    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="point">.</string>
    <string name="clear">CLR</string>
    <string name="op_div">÷</string>
    <string name="op_mul">×</string>
    <string name="op_sub">-</string>
    <string name="op_add">+</string>
    <string name="op_equ">=</string>

</resources>
