<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/resText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:digits="0123456789+-×÷."
        android:gravity="end|center_vertical"
        android:hint="@null"
        android:inputType="text"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textSize="@dimen/num_text_size"
        android:focusable="false"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/num_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_7" />

        <Button
            android:id="@+id/num_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num_8"
            android:textSize="@dimen/num_text_size"/>

        <Button
            android:id="@+id/num_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_9" />

        <Button
            android:id="@+id/op_div"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/op_div" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/num_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_4" />

        <Button
            android:id="@+id/num_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_5" />

        <Button
            android:id="@+id/num_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_6" />

        <Button
            android:id="@+id/op_mul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/op_mul" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/num_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_1" />

        <Button
            android:id="@+id/num_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_2" />

        <Button
            android:id="@+id/num_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_3" />

        <Button
            android:id="@+id/op_sub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/op_sub" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/point" />

        <Button
            android:id="@+id/num_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/num_0" />

        <Button
            android:id="@+id/op_equ"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/op_equ" />

        <Button
            android:id="@+id/op_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/num_text_size"
            android:text="@string/op_add" />
    </LinearLayout>

</LinearLayout>